tests/baselines/reference/parserComputedPropertyName4.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName4.ts(1,15): error TS9002: Computed property names are not currently supported.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName4.ts (1 errors) ====
    var v = { get [e]() { } };
                  ~~~
!!! error TS9002: Computed property names are not currently supported.